# KuraKura

./: .gitignore  spec.md
backend/: .swp  Cargo.toml  citr  spin  todo
backend/src/: cell.rs  game.rs  lib.rs  lobby.rs  main.rs  server.rs  test.rs  types.rs
backend/src/snapshots/: twirl__test-2.snap  twirl__test-3.snap  twirl__test-4.snap  twirl__test-5.snap  twirl__test-6.snap  twirl__test.snap  twirl__test.snap.new  twirl__test__test-2.snap  twirl__test__test-3.snap  twirl__test__test-4.snap  twirl__test__test-5.snap  twirl__test__test-6.snap  twirl__test__test-7.snap  twirl__test__test-8.snap  twirl__test__test-8.snap.new  twirl__test__test.snap
backend/tests/: test.rs
backend/tests/snapshots/: test__original_test-2.snap  test__original_test-3.snap  test__original_test-4.snap  test__original_test-5.snap  test__original_test-6.snap  test__original_test-7.snap  test__original_test-8.snap  test__original_test.snap  test__test-2.snap  test__test-2.snap.new  test__test-3.snap  test__test-3.snap.new  test__test-4.snap  test__test-4.snap.new  test__test-5.snap  test__test-5.snap.new  test__test-6.snap  test__test-6.snap.new  test__test-7.snap  test__test-7.snap.new  test__test-8.snap  test__test-8.snap.new  test__test.snap  test__test.snap.new
frontend/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  Board.css  Board.tsx  BoardCell.css  BoardCell.tsx  BoardStone.css  BoardStone.tsx  Game.tsx  Home.tsx  SpinPreview.css  SpinPreview.tsx  WebSocketContext.tsx  index.css  logic.ts  types.ts
src/: game.rs  main.rs
